--- a/spicerackhistory.html
+++ b/spicerackhistory.html
@@ -81,7 +81,7 @@
             <div class="content">
                 <h2>Nick Gets Exposed (Pt.2)</h2>
                 <p>
-            [7/23/20] Part 2, Nick was minding his own afternoon when suddenly, he was exposed yet again. This time, he was exposed for being being bi,
+            [7/23/20] Part 2, Nick was minding his own afternoon when suddenly, he was exposed yet again. This time, he was exposed for being bi,
             in a time where he refused to admit he wasn't straight. Now he's pan and much more acceptful of his identity, but it was fun to laugh at the evidence
             being straight in his face without him realizing it.
                 </p>
