--- a/pastmemberspage.html
+++ b/pastmemberspage.html
@@ -9,7 +9,7 @@
 <body id="body1">
 <div id="navbar">
     <a class="active text" href="currentcrewpage.html">The Crew</a>
-    <a class="text" href="#history">History</a>
+    <a class="text" href="spicerackhistory.html">History</a>
     <a class="navbar-brand"><div class="logo-image"><img src="spicerackicon.png" width="60px" height="50px" id="navicon"></div></a>
     <a class="text" href="#channels">Channels</a>
     <a class="text" href="index.html">Author's Note</a>
