--- a/spicerackhistory.html
+++ b/spicerackhistory.html
@@ -129,8 +129,8 @@
             <div class="content">
                 <h2>1st Pride Show & Tell</h2>
                 <p>
-            [9/23/20] Things got a little hot & steamy in the Spicerack server, there was some flerting going on between Nick and I. Nothing past PG don't worry, 
-            and no, this didn't lead to the creation of the R-rated channel. 
+            [9/23/20] The 1st Pride Show & Tell! This is such a big moment in Spicerack history, it started a tradition and forced us to be vulnerable for a little bit, which 
+                    leads to a stronger relationship overall. This is one of my favorite things to look forward to anually, and I hope we continue it.
                 </p>
                     <img src="firstpride.png" style=" width: 550px; height: 350px; padding-left: 425px; margin-top: -210px; padding-bottom: 20px">
                 </div>
