--- a/pastmemberspage.html
+++ b/pastmemberspage.html
@@ -31,7 +31,7 @@
 <center><div class="infobox">
     <img src="lethebooprofile.png" class="profileimg">
     <h2 class="discord-name">Letheboo</h2>
-    <h3 class="name">Name: Unknown</h3>
+    <h3 class="name">Name: Michael</h3>
     <h3 class="discord-tag">Tag: Letheboo#4321</h3>
     <h3 class="date-joined">Date Joined: 1/14/20</h3>
 </div></center> 
