--- a/pastmemberspage.html
+++ b/pastmemberspage.html
@@ -115,6 +115,14 @@
     <h3 class="discord-tag">Tag: Nurd_boi 2.0#9466</h3>
     <h3 class="date-joined">Date Joined: 3/11/19</h3>
 </div></center> 
+    
+ <center><div class="infobox">
+    <img src="alopprofile.png" class="profileimg">
+    <h2 class="discord-name">Alop</h2>
+    <h3 class="name">Name: Al</h3>
+    <h3 class="discord-tag">Tag: alop#8129</h3>
+    <h3 class="date-joined">Date Joined: ?</h3>
+</div></center> 
 
 <div class="tootherpart"><a href="currentcrewpage.html"><-- To Current Members</a></div>
 
